Fix menu buttons disappearing by using position:fixed and higher z-index

--- a/css/layout.css
+++ b/css/layout.css
@@ -19,16 +19,20 @@ div.panel {
     overflow-y: auto;
 }
 
-div#displayPanel, div#statsPanel, div#aboutPanel {
+div#displayPanel,
+div#statsPanel,
+div#aboutPanel {
     display: none;
 }
 
 div#menuButtonRow {
-    position: absolute;
+    position: fixed;
+    /* Changed from absolute to fixed */
     top: 1em;
     left: 1em;
     margin: 0;
-    z-index: 1200;
+    z-index: 9999;
+    /* Ensure it's above everything */
 }
 
 div.menuButton {
@@ -75,7 +79,8 @@ table.statsTable {
     margin-bottom: 1em;
 }
 
-table.statsTable th, table.statsTable td {
+table.statsTable th,
+table.statsTable td {
     border: 1px solid;
     padding: 0.2em 0.5em;
 }
@@ -88,9 +93,9 @@ span.dialog-open-link {
 
 div.dialog {
     position: absolute;
-    top:  50%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     z-index: 9999;
     padding: 0 1em;
     display: none;
